force-app/main/default/objects/Webhook_Log__c/Webhook_Log__c.object-meta.xml
<CustomObject>
    <label>Webhook Log</label>
    <nameField>
        <displayFormat>log-{0000000}</displayFormat>
        <label>Webhook Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webhook Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>