force-app/main/default/objects/Webhook_Log__c/fields/headers__c.field-meta.xml
<CustomField>
    <fullName>headers__c</fullName>
    <label>headers</label>
    <length>1024</length>
    <type>Html</type>
</CustomField>