force-app/main/default/objects/Webhook_Log__c/fields/httpMethod__c.field-meta.xml
<CustomField>
    <fullName>httpMethod__c</fullName>
    <description>The type of request</description>
    <label>httpMethod</label>
    <length>20</length>
    <type>Text</type>
</CustomField>