force-app/main/default/objects/Webhook_Log__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <label>Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>