force-app/main/default/objects/Webhook_Log__c/fields/params__c.field-meta.xml
<CustomField>
    <fullName>params__c</fullName>
    <label>params</label>
    <length>2048</length>
    <type>Html</type>
</CustomField>