force-app/main/default/objects/Webhook_Log__c/fields/remoteAddress__c.field-meta.xml
<CustomField>
    <fullName>remoteAddress__c</fullName>
    <label>remoteAddress</label>
    <length>120</length>
    <type>Text</type>
</CustomField>