force-app/main/default/objects/Webhook_Log__c/fields/requestBody__c.field-meta.xml
<CustomField>
    <fullName>requestBody__c</fullName>
    <description>The response sent to this query</description>
    <label>requestBody</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>