force-app/main/default/objects/Webhook_Log__c/fields/requestURI__c.field-meta.xml
<CustomField>
    <fullName>requestURI__c</fullName>
    <label>requestURI</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>