force-app/main/default/objects/Webhook_Log__c/fields/resourcePath__c.field-meta.xml
<CustomField>
    <fullName>resourcePath__c</fullName>
    <label>resourcePath</label>
    <type>TextArea</type>
</CustomField>