force-app/main/default/objects/Webhook_Log__c/fields/statusCode__c.field-meta.xml
<CustomField>
    <fullName>statusCode__c</fullName>
    <description>usually a 3 character response (e.g. 200, 400)</description>
    <label>statusCode</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>